# snaic-w1capstone-rossmann

./: README.md  ablation_log_report.csv  eda_JL_CPU.ipynb  part_d_failure_analysis.py  pyproject.toml  requirements.txt  rossmann_final.py
data/: mechanical_failure_analysis.csv
outputs/: ablation_log_report.csv  submission.csv
submissions/: rossmann_lgbm_business.csv  rossmann_lgbm_kaggle.csv  rossmann_lgbm_predictions_full.csv  rossmann_rf_business.csv  rossmann_rf_kaggle.csv  rossmann_rf_predictions_full.csv
