[project]
name = "snaic-w1capstone-rossmann"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.5"
dependencies = [
    "lightgbm>=4.6.0",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pathlib>=1.0.1",
    "scikit-learn>=1.9.0",
]
