[project]
name = "rossmann-sales-forecasting"
version = "0.1.0"
description = "Predicting sales for Rossmann drugstores"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "jupyter>=1.0.0",
    "numpy>=1.24.0",
]

[project.scripts]
rossmann-forecast = "rossmann_final:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
